:bug:  letter spacing bug updated

--- a/assets/css/portefolio.css
+++ b/assets/css/portefolio.css
@@ -136,7 +136,7 @@ footer{
 
 footer div{
   text-align              : center;
-  letter-spacing          : 1.3px;
+  letter-spacing          : 0.1rem;
   color                   : white;
 }
 
